--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "cost-manager-restful-web-services",
-  "version": "0.0.0",
+  "description": "RESTful Web Services for Cost Manager",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "live": "nodemon app.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "express": "5.0.0",
+    "mongoose": "^8.9.4",
+    "dotenv": "^16.0.3"
   }
 }
