--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "debug": "~2.6.9",
     "express": "5.0.0",
-    "mongoose": "^8.9.4",
-    "dotenv": "^16.0.3"
+    "mongoose": "^8.9.4"
   }
 }
